--- a/MultipleStoryboardsApp/Info.plist
+++ b/MultipleStoryboardsApp/Info.plist
@@ -30,6 +30,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>TyphoonInitialAssemblies</key>
+	<array>
+		<string>MSAApplicationAssembly</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
