Добавлена логика экрана Пород котов

--- a/MultipleStoryboardsApp/Info.plist
+++ b/MultipleStoryboardsApp/Info.plist
@@ -32,7 +32,8 @@
 	</array>
 	<key>TyphoonInitialAssemblies</key>
 	<array>
-		<string>MSAApplicationAssembly</string>
+		<string>MSAMainAssembly</string>
+		<string>MSABreedsAssembly</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
