Добавлена Settings User Story

--- a/MultipleStoryboardsApp/Info.plist
+++ b/MultipleStoryboardsApp/Info.plist
@@ -35,6 +35,7 @@
 		<string>MSAMainAssembly</string>
 		<string>MSABreedsAssembly</string>
 		<string>MSABestCatAssembly</string>
+		<string>MSASettingsAssembly</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
